<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|end"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_factorial"
            android:layout_width="102dp"
            android:layout_height="40dp"
            android:text="Factorial"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.498" />

        <Button
            android:id="@+id/btn_fibonacci"
            android:layout_width="102dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:text="Fibonacci"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/tv_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAlignment="textEnd"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="textEnd"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:text="C" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:text="DEL"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_exponent"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:text="^"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:text="÷"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:text="7" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:text="8" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:text="9" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:text="×"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:text="4" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:text="5" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:text="6" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:text="−"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:text="1" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:text="2" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:text="3" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:text="+"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_0"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:text="0" />

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:text="." />

            <Button
                android:id="@+id/btn_equals"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="13.2dp"
                android:layout_weight="1"
                android:text="="
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
